--- a/hpc/openacc/English/Fortran/jupyter_notebook/openacc_fortran_lab1.ipynb
+++ b/hpc/openacc/English/Fortran/jupyter_notebook/openacc_fortran_lab1.ipynb
@@ -29,6 +29,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Donwload and install NVIDIA HPC SDK"
+      ],
+      "metadata": {
+        "id": "n8mICxHdmRKh"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "%%time\n",
@@ -43,9 +52,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iv_6sBm1vZ6u",
-        "outputId": "932d33d1-1a7b-430c-e4a8-7b7802ed49ca"
+        "outputId": "e452d1c4-8086-4ae9-c7c8-c318b63e0f90"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -53,31 +62,29 @@
           "text": [
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r100  1626  100  1626    0     0  31269      0 --:--:-- --:--:-- --:--:-- 31269\n",
+            "\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r100  1626  100  1626    0     0  25406      0 --:--:-- --:--:-- --:--:-- 25406\n",
             "deb [signed-by=/usr/share/keyrings/nvidia-hpcsdk-archive-keyring.gpg] https://developer.download.nvidia.com/hpc-sdk/ubuntu/amd64 /\n",
             "Hit:1 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu focal InRelease\n",
-            "Get:2 http://security.ubuntu.com/ubuntu focal-security InRelease [114 kB]\n",
-            "Get:3 https://cloud.r-project.org/bin/linux/ubuntu focal-cran40/ InRelease [3,622 B]\n",
-            "Hit:4 http://ppa.launchpad.net/cran/libgit2/ubuntu focal InRelease\n",
+            "Get:2 https://cloud.r-project.org/bin/linux/ubuntu focal-cran40/ InRelease [3,622 B]\n",
+            "Hit:3 http://ppa.launchpad.net/cran/libgit2/ubuntu focal InRelease\n",
+            "Get:4 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64  InRelease [1,581 B]\n",
             "Hit:5 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu focal InRelease\n",
-            "Get:6 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64  InRelease [1,581 B]\n",
+            "Get:6 https://developer.download.nvidia.com/hpc-sdk/ubuntu/amd64  InRelease [2,126 B]\n",
             "Hit:7 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu focal InRelease\n",
-            "Get:8 https://developer.download.nvidia.com/hpc-sdk/ubuntu/amd64  InRelease [2,126 B]\n",
-            "Hit:9 http://ppa.launchpad.net/ubuntugis/ppa/ubuntu focal InRelease\n",
+            "Hit:8 http://ppa.launchpad.net/ubuntugis/ppa/ubuntu focal InRelease\n",
+            "Get:9 http://security.ubuntu.com/ubuntu focal-security InRelease [114 kB]\n",
             "Hit:10 http://archive.ubuntu.com/ubuntu focal InRelease\n",
             "Get:11 http://archive.ubuntu.com/ubuntu focal-updates InRelease [114 kB]\n",
-            "Get:12 http://security.ubuntu.com/ubuntu focal-security/restricted amd64 Packages [2,139 kB]\n",
-            "Get:13 http://security.ubuntu.com/ubuntu focal-security/main amd64 Packages [2,629 kB]\n",
-            "Get:14 http://security.ubuntu.com/ubuntu focal-security/multiverse amd64 Packages [28.5 kB]\n",
-            "Get:15 http://security.ubuntu.com/ubuntu focal-security/universe amd64 Packages [1,033 kB]\n",
-            "Get:16 http://archive.ubuntu.com/ubuntu focal-backports InRelease [108 kB]\n",
-            "Get:17 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64  Packages [993 kB]\n",
-            "Get:18 https://developer.download.nvidia.com/hpc-sdk/ubuntu/amd64  Packages [10.5 kB]\n",
-            "Get:19 http://archive.ubuntu.com/ubuntu focal-updates/universe amd64 Packages [1,329 kB]\n",
-            "Get:20 http://archive.ubuntu.com/ubuntu focal-updates/main amd64 Packages [3,111 kB]\n",
-            "Get:21 http://archive.ubuntu.com/ubuntu focal-updates/multiverse amd64 Packages [31.2 kB]\n",
-            "Get:22 http://archive.ubuntu.com/ubuntu focal-updates/restricted amd64 Packages [2,277 kB]\n",
-            "Fetched 13.9 MB in 3s (5,316 kB/s)\n",
+            "Get:12 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64  Packages [993 kB]\n",
+            "Get:13 http://archive.ubuntu.com/ubuntu focal-backports InRelease [108 kB]\n",
+            "Get:14 https://developer.download.nvidia.com/hpc-sdk/ubuntu/amd64  Packages [10.5 kB]\n",
+            "Get:15 http://security.ubuntu.com/ubuntu focal-security/main amd64 Packages [2,629 kB]\n",
+            "Get:16 http://archive.ubuntu.com/ubuntu focal-updates/main amd64 Packages [3,111 kB]\n",
+            "Get:17 http://security.ubuntu.com/ubuntu focal-security/universe amd64 Packages [1,033 kB]\n",
+            "Get:18 http://archive.ubuntu.com/ubuntu focal-updates/restricted amd64 Packages [2,277 kB]\n",
+            "Get:19 http://archive.ubuntu.com/ubuntu focal-updates/multiverse amd64 Packages [31.2 kB]\n",
+            "Get:20 http://archive.ubuntu.com/ubuntu focal-updates/universe amd64 Packages [1,329 kB]\n",
+            "Fetched 11.8 MB in 2s (5,484 kB/s)\n",
             "Reading package lists... Done\n",
             "Reading package lists... Done\n",
             "Building dependency tree       \n",
@@ -86,12 +93,12 @@
             "  nvhpc-2023\n",
             "The following NEW packages will be installed:\n",
             "  nvhpc-2023 nvhpc-23-3\n",
-            "0 upgraded, 2 newly installed, 0 to remove and 30 not upgraded.\n",
+            "0 upgraded, 2 newly installed, 0 to remove and 26 not upgraded.\n",
             "Need to get 3,053 MB of archives.\n",
             "After this operation, 11.7 GB of additional disk space will be used.\n",
             "Get:1 https://developer.download.nvidia.com/hpc-sdk/ubuntu/amd64  nvhpc-23-3 23.3 [3,053 MB]\n",
             "Get:2 https://developer.download.nvidia.com/hpc-sdk/ubuntu/amd64  nvhpc-2023 23.3 [1,214 B]\n",
-            "Fetched 3,053 MB in 28s (108 MB/s)\n",
+            "Fetched 3,053 MB in 31s (97.9 MB/s)\n",
             "debconf: unable to initialize frontend: Dialog\n",
             "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 76, <> line 2.)\n",
             "debconf: falling back to frontend: Readline\n",
@@ -108,11 +115,20 @@
             "Unpacking nvhpc-2023 (23.3) ...\n",
             "Setting up nvhpc-2023 (23.3) ...\n",
             "Setting up nvhpc-23-3 (23.3) ...\n",
-            "CPU times: user 1.88 s, sys: 239 ms, total: 2.12 s\n",
-            "Wall time: 5min 15s\n"
+            "CPU times: user 1.94 s, sys: 272 ms, total: 2.21 s\n",
+            "Wall time: 5min 31s\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Install `environment-modules` package to load `nvhpc`"
+      ],
+      "metadata": {
+        "id": "Qu9UwS4Pme8h"
+      }
     },
     {
       "cell_type": "code",
@@ -125,9 +141,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F0CRfGnjvgyO",
-        "outputId": "4c284d2e-1956-481c-a612-d1fa6d655398"
+        "outputId": "9c1f4d1f-1796-42da-8a79-80054dacd536"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,11 +154,11 @@
             "Reading state information...\n",
             "The following NEW packages will be installed:\n",
             "  environment-modules\n",
-            "0 upgraded, 1 newly installed, 0 to remove and 30 not upgraded.\n",
+            "0 upgraded, 1 newly installed, 0 to remove and 26 not upgraded.\n",
             "Need to get 281 kB of archives.\n",
             "After this operation, 826 kB of additional disk space will be used.\n",
             "Get:1 http://archive.ubuntu.com/ubuntu focal/universe amd64 environment-modules amd64 4.4.1-1 [281 kB]\n",
-            "Fetched 281 kB in 1s (496 kB/s)\n",
+            "Fetched 281 kB in 0s (2,943 kB/s)\n",
             "Selecting previously unselected package environment-modules.\r\n",
             "(Reading database ... \r(Reading database ... 5%\r(Reading database ... 10%\r(Reading database ... 15%\r(Reading database ... 20%\r(Reading database ... 25%\r(Reading database ... 30%\r(Reading database ... 35%\r(Reading database ... 40%\r(Reading database ... 45%\r(Reading database ... 50%\r(Reading database ... 55%\r(Reading database ... 60%\r(Reading database ... 65%\r(Reading database ... 70%\r(Reading database ... 75%\r(Reading database ... 80%\r(Reading database ... 85%\r(Reading database ... 90%\r(Reading database ... 95%\r(Reading database ... 100%\r(Reading database ... 137529 files and directories currently installed.)\r\n",
             "Preparing to unpack .../environment-modules_4.4.1-1_amd64.deb ...\r\n",
@@ -161,6 +177,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Loading `nvhpc` and run `nvaccelinfo` command"
+      ],
+      "metadata": {
+        "id": "ffug2Yfkmuug"
+      }
     },
     {
       "cell_type": "markdown",
@@ -183,12 +208,12 @@
       ],
       "metadata": {
         "id": "1Z_6ReluxYdo",
-        "outputId": "f9d43b7b-6738-45fe-aea9-bea87ef0d6e1",
+        "outputId": "83e45146-64b9-45f9-cb57-b4dea5a27ea9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -457,22 +482,30 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Donwnload source code files from the `gpubootcamp` forked GitHub repository"
+      ],
+      "metadata": {
+        "id": "Q4JUYREmnL-9"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "%%bash\n",
-        "git --version\n",
         "git clone --depth 1 --branch colab --no-checkout https://github.com/robertopsouto/gpubootcamp.git \n",
         "cd gpubootcamp\n",
         "git sparse-checkout set hpc/openacc/English"
       ],
       "metadata": {
         "id": "ePiahUwXzKi_",
-        "outputId": "c2db53de-fa76-4d11-b065-efb7923407b9",
+        "outputId": "c3896203-51a6-4c4a-ee24-8c8a7ecc2fd4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -491,14 +524,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Compiling and run serial version of the `laplace` example"
+      ],
+      "metadata": {
+        "id": "PIVBz8XbnoQT"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FdNkRZixvJkM",
-        "outputId": "f6e2fbdd-4d12-44db-fa71-9441efe13b0d"
+        "outputId": "7d039195-d32d-4204-f754-3fc66f4c6277"
       },
       "outputs": [
         {
@@ -519,7 +561,7 @@
             "  700  0.000345\n",
             "  800  0.000302\n",
             "  900  0.000269\n",
-            " completed in     50.157 seconds\n"
+            " completed in     51.639 seconds\n"
           ]
         },
         {
@@ -536,7 +578,11 @@
         "source /usr/share/modules/init/bash\n",
         "module use /opt/nvidia/hpc_sdk/modulefiles\n",
         "module load nvhpc/23.3\n",
-        "cd gpubootcamp/hpc/openacc/English/Fortran/source_code/lab1 && make clean && make laplace_serial && echo \"Compilation Successful!\" && ./laplace"
+        "cd gpubootcamp/hpc/openacc/English/Fortran/source_code/lab1 \n",
+        "make clean\n",
+        "make laplace_serial \n",
+        "echo \"Compilation Successful!\"\n",
+        "./laplace"
       ]
     },
     {
@@ -674,13 +720,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "TkKE90xVvJkO",
-        "outputId": "d233d3ae-eff4-48af-98b9-057452092224"
+        "outputId": "a718d5e2-ba16-4475-dd6d-e72faabc8436"
       },
       "outputs": [
         {
@@ -701,7 +747,7 @@
             "  700  0.000345\n",
             "  800  0.000302\n",
             "  900  0.000269\n",
-            " completed in     50.435 seconds\n"
+            " completed in     46.662 seconds\n"
           ]
         },
         {
@@ -709,6 +755,15 @@
           "name": "stderr",
           "text": [
             "laplace2d.f90:\n",
+            "calcnext:\n",
+            "     58, Generating Multicore code\n",
+            "         59, !$acc loop gang\n",
+            "     59, Generating reduction(max:error)\n",
+            "     60, Loop is parallelizable\n",
+            "swap:\n",
+            "     76, Generating Multicore code\n",
+            "         77, !$acc loop gang\n",
+            "     78, Loop is parallelizable\n",
             "jacobi.f90:\n"
           ]
         }
@@ -771,13 +826,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cLIVAniivJkO",
-        "outputId": "dc51479a-16d5-4687-9cd2-6d5298e85b4c"
+        "outputId": "f3646585-f818-4857-b721-0c8ab1727ce3"
       },
       "outputs": [
         {
@@ -798,7 +853,7 @@
             "  700  0.000345\n",
             "  800  0.000302\n",
             "  900  0.000269\n",
-            " completed in     51.310 seconds\n"
+            " completed in      2.901 seconds\n"
           ]
         },
         {
@@ -806,6 +861,24 @@
           "name": "stderr",
           "text": [
             "laplace2d.f90:\n",
+            "calcnext:\n",
+            "     58, Generating implicit copyin(a(:n-1,:m-1)) [if not already present]\n",
+            "         Generating implicit copy(error) [if not already present]\n",
+            "         Generating implicit copyout(anew(1:n-2,1:m-2)) [if not already present]\n",
+            "     59, Loop is parallelizable\n",
+            "     60, Loop is parallelizable\n",
+            "         Generating NVIDIA GPU code\n",
+            "         59, !$acc loop gang, vector(128) collapse(2) ! blockidx%x threadidx%x\n",
+            "             Generating implicit reduction(max:error)\n",
+            "         60,   ! blockidx%x threadidx%x auto-collapsed\n",
+            "swap:\n",
+            "     77, Generating implicit copyin(anew(1:n-2,1:m-2)) [if not already present]\n",
+            "         Generating implicit copyout(a(1:n-2,1:m-2)) [if not already present]\n",
+            "     78, Loop is parallelizable\n",
+            "     79, Loop is parallelizable\n",
+            "         Generating NVIDIA GPU code\n",
+            "         78, !$acc loop gang, vector(128) collapse(2) ! blockidx%x threadidx%x\n",
+            "         79,   ! blockidx%x threadidx%x auto-collapsed\n",
             "jacobi.f90:\n"
           ]
         }
@@ -815,7 +888,12 @@
         "source /usr/share/modules/init/bash\n",
         "module use /opt/nvidia/hpc_sdk/modulefiles\n",
         "module load nvhpc/23.3\n",
-        "cd gpubootcamp/hpc/openacc/English/Fortran/source_code/lab1 && make clean && make laplace_gpu && echo \"Compilation Successful!\" && ./laplace"
+        "cd gpubootcamp/hpc/openacc/English/Fortran/source_code/lab1/solutions\n",
+        "make clean\n",
+        "cp laplace2d.kernels.f90 laplace2d.f90\n",
+        "make laplace_gpu\n",
+        "echo \"Compilation Successful!\"\n",
+        "./laplace"
       ]
     },
     {
