--- a/hpc/openacc/English/Fortran/jupyter_notebook/openacc_fortran_lab1.ipynb
+++ b/hpc/openacc/English/Fortran/jupyter_notebook/openacc_fortran_lab1.ipynb
@@ -48,78 +48,10 @@
         "! sudo apt-get install -y nvhpc-23-3"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "iv_6sBm1vZ6u",
-        "outputId": "e452d1c4-8086-4ae9-c7c8-c318b63e0f90"
+        "id": "iv_6sBm1vZ6u"
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-            "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r100  1626  100  1626    0     0  25406      0 --:--:-- --:--:-- --:--:-- 25406\n",
-            "deb [signed-by=/usr/share/keyrings/nvidia-hpcsdk-archive-keyring.gpg] https://developer.download.nvidia.com/hpc-sdk/ubuntu/amd64 /\n",
-            "Hit:1 http://ppa.launchpad.net/c2d4u.team/c2d4u4.0+/ubuntu focal InRelease\n",
-            "Get:2 https://cloud.r-project.org/bin/linux/ubuntu focal-cran40/ InRelease [3,622 B]\n",
-            "Hit:3 http://ppa.launchpad.net/cran/libgit2/ubuntu focal InRelease\n",
-            "Get:4 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64  InRelease [1,581 B]\n",
-            "Hit:5 http://ppa.launchpad.net/deadsnakes/ppa/ubuntu focal InRelease\n",
-            "Get:6 https://developer.download.nvidia.com/hpc-sdk/ubuntu/amd64  InRelease [2,126 B]\n",
-            "Hit:7 http://ppa.launchpad.net/graphics-drivers/ppa/ubuntu focal InRelease\n",
-            "Hit:8 http://ppa.launchpad.net/ubuntugis/ppa/ubuntu focal InRelease\n",
-            "Get:9 http://security.ubuntu.com/ubuntu focal-security InRelease [114 kB]\n",
-            "Hit:10 http://archive.ubuntu.com/ubuntu focal InRelease\n",
-            "Get:11 http://archive.ubuntu.com/ubuntu focal-updates InRelease [114 kB]\n",
-            "Get:12 https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64  Packages [993 kB]\n",
-            "Get:13 http://archive.ubuntu.com/ubuntu focal-backports InRelease [108 kB]\n",
-            "Get:14 https://developer.download.nvidia.com/hpc-sdk/ubuntu/amd64  Packages [10.5 kB]\n",
-            "Get:15 http://security.ubuntu.com/ubuntu focal-security/main amd64 Packages [2,629 kB]\n",
-            "Get:16 http://archive.ubuntu.com/ubuntu focal-updates/main amd64 Packages [3,111 kB]\n",
-            "Get:17 http://security.ubuntu.com/ubuntu focal-security/universe amd64 Packages [1,033 kB]\n",
-            "Get:18 http://archive.ubuntu.com/ubuntu focal-updates/restricted amd64 Packages [2,277 kB]\n",
-            "Get:19 http://archive.ubuntu.com/ubuntu focal-updates/multiverse amd64 Packages [31.2 kB]\n",
-            "Get:20 http://archive.ubuntu.com/ubuntu focal-updates/universe amd64 Packages [1,329 kB]\n",
-            "Fetched 11.8 MB in 2s (5,484 kB/s)\n",
-            "Reading package lists... Done\n",
-            "Reading package lists... Done\n",
-            "Building dependency tree       \n",
-            "Reading state information... Done\n",
-            "The following additional packages will be installed:\n",
-            "  nvhpc-2023\n",
-            "The following NEW packages will be installed:\n",
-            "  nvhpc-2023 nvhpc-23-3\n",
-            "0 upgraded, 2 newly installed, 0 to remove and 26 not upgraded.\n",
-            "Need to get 3,053 MB of archives.\n",
-            "After this operation, 11.7 GB of additional disk space will be used.\n",
-            "Get:1 https://developer.download.nvidia.com/hpc-sdk/ubuntu/amd64  nvhpc-23-3 23.3 [3,053 MB]\n",
-            "Get:2 https://developer.download.nvidia.com/hpc-sdk/ubuntu/amd64  nvhpc-2023 23.3 [1,214 B]\n",
-            "Fetched 3,053 MB in 31s (97.9 MB/s)\n",
-            "debconf: unable to initialize frontend: Dialog\n",
-            "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 76, <> line 2.)\n",
-            "debconf: falling back to frontend: Readline\n",
-            "debconf: unable to initialize frontend: Readline\n",
-            "debconf: (This frontend requires a controlling tty.)\n",
-            "debconf: falling back to frontend: Teletype\n",
-            "dpkg-preconfigure: unable to re-open stdin: \n",
-            "Selecting previously unselected package nvhpc-23-3.\n",
-            "(Reading database ... 122352 files and directories currently installed.)\n",
-            "Preparing to unpack .../nvhpc-23-3_23.3_amd64.deb ...\n",
-            "Unpacking nvhpc-23-3 (23.3) ...\n",
-            "Selecting previously unselected package nvhpc-2023.\n",
-            "Preparing to unpack .../nvhpc-2023_23.3_amd64.deb ...\n",
-            "Unpacking nvhpc-2023 (23.3) ...\n",
-            "Setting up nvhpc-2023 (23.3) ...\n",
-            "Setting up nvhpc-23-3 (23.3) ...\n",
-            "CPU times: user 1.94 s, sys: 272 ms, total: 2.21 s\n",
-            "Wall time: 5min 31s\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -137,46 +69,10 @@
         "apt install environment-modules"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "F0CRfGnjvgyO",
-        "outputId": "9c1f4d1f-1796-42da-8a79-80054dacd536"
+        "id": "F0CRfGnjvgyO"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Reading package lists...\n",
-            "Building dependency tree...\n",
-            "Reading state information...\n",
-            "The following NEW packages will be installed:\n",
-            "  environment-modules\n",
-            "0 upgraded, 1 newly installed, 0 to remove and 26 not upgraded.\n",
-            "Need to get 281 kB of archives.\n",
-            "After this operation, 826 kB of additional disk space will be used.\n",
-            "Get:1 http://archive.ubuntu.com/ubuntu focal/universe amd64 environment-modules amd64 4.4.1-1 [281 kB]\n",
-            "Fetched 281 kB in 0s (2,943 kB/s)\n",
-            "Selecting previously unselected package environment-modules.\r\n",
-            "(Reading database ... \r(Reading database ... 5%\r(Reading database ... 10%\r(Reading database ... 15%\r(Reading database ... 20%\r(Reading database ... 25%\r(Reading database ... 30%\r(Reading database ... 35%\r(Reading database ... 40%\r(Reading database ... 45%\r(Reading database ... 50%\r(Reading database ... 55%\r(Reading database ... 60%\r(Reading database ... 65%\r(Reading database ... 70%\r(Reading database ... 75%\r(Reading database ... 80%\r(Reading database ... 85%\r(Reading database ... 90%\r(Reading database ... 95%\r(Reading database ... 100%\r(Reading database ... 137529 files and directories currently installed.)\r\n",
-            "Preparing to unpack .../environment-modules_4.4.1-1_amd64.deb ...\r\n",
-            "Unpacking environment-modules (4.4.1-1) ...\r\n",
-            "Setting up environment-modules (4.4.1-1) ...\r\n",
-            "Processing triggers for man-db (2.9.1-1) ...\r\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\n",
-            "WARNING: apt does not have a stable CLI interface. Use with caution in scripts.\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -207,58 +103,10 @@
         "nvaccelinfo"
       ],
       "metadata": {
-        "id": "1Z_6ReluxYdo",
-        "outputId": "83e45146-64b9-45f9-cb57-b4dea5a27ea9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "1Z_6ReluxYdo"
       },
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "CUDA Driver Version:           12000\n",
-            "NVRM version:                  NVIDIA UNIX x86_64 Kernel Module  525.85.12  Sat Jan 28 02:10:06 UTC 2023\n",
-            "\n",
-            "Device Number:                 0\n",
-            "Device Name:                   Tesla T4\n",
-            "Device Revision Number:        7.5\n",
-            "Global Memory Size:            15835398144\n",
-            "Number of Multiprocessors:     40\n",
-            "Concurrent Copy and Execution: Yes\n",
-            "Total Constant Memory:         65536\n",
-            "Total Shared Memory per Block: 49152\n",
-            "Registers per Block:           65536\n",
-            "Warp Size:                     32\n",
-            "Maximum Threads per Block:     1024\n",
-            "Maximum Block Dimensions:      1024, 1024, 64\n",
-            "Maximum Grid Dimensions:       2147483647 x 65535 x 65535\n",
-            "Maximum Memory Pitch:          2147483647B\n",
-            "Texture Alignment:             512B\n",
-            "Clock Rate:                    1590 MHz\n",
-            "Execution Timeout:             No\n",
-            "Integrated Device:             No\n",
-            "Can Map Host Memory:           Yes\n",
-            "Compute Mode:                  default\n",
-            "Concurrent Kernels:            Yes\n",
-            "ECC Enabled:                   Yes\n",
-            "Memory Clock Rate:             5001 MHz\n",
-            "Memory Bus Width:              256 bits\n",
-            "L2 Cache Size:                 4194304 bytes\n",
-            "Max Threads Per SMP:           1024\n",
-            "Async Engines:                 3\n",
-            "Unified Addressing:            Yes\n",
-            "Managed Memory:                Yes\n",
-            "Concurrent Managed Memory:     Yes\n",
-            "Preemption Supported:          Yes\n",
-            "Cooperative Launch:            Yes\n",
-            "Default Target:                cc75\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -499,34 +347,15 @@
         "git sparse-checkout set hpc/openacc/English"
       ],
       "metadata": {
-        "id": "ePiahUwXzKi_",
-        "outputId": "c3896203-51a6-4c4a-ee24-8c8a7ecc2fd4",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "ePiahUwXzKi_"
       },
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "git version 2.25.1\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "Cloning into 'gpubootcamp'...\n"
-          ]
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## Compiling and run serial version of the `laplace` example"
+        "## Compiling and run **serial** version of the `laplace` example"
       ],
       "metadata": {
         "id": "PIVBz8XbnoQT"
@@ -534,45 +363,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FdNkRZixvJkM",
-        "outputId": "7d039195-d32d-4204-f754-3fc66f4c6277"
+        "id": "FdNkRZixvJkM"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "rm -f *.o laplace\n",
-            "nvfortran -fast -o laplace laplace2d.f90 jacobi.f90\n",
-            "Compilation Successful!\n",
-            "Jacobi relaxation Calculation: 4096 x 4096 mesh\n",
-            "    0  0.250000\n",
-            "  100  0.002397\n",
-            "  200  0.001204\n",
-            "  300  0.000804\n",
-            "  400  0.000603\n",
-            "  500  0.000483\n",
-            "  600  0.000403\n",
-            "  700  0.000345\n",
-            "  800  0.000302\n",
-            "  900  0.000269\n",
-            " completed in     51.639 seconds\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "laplace2d.f90:\n",
-            "jacobi.f90:\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "%%bash\n",
         "source /usr/share/modules/init/bash\n",
@@ -719,55 +514,21 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "TkKE90xVvJkO",
-        "outputId": "a718d5e2-ba16-4475-dd6d-e72faabc8436"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "rm -f *.o laplace\n",
-            "nvfortran -fast -ta=multicore -Minfo=accel -o laplace laplace2d.f90 jacobi.f90 \n",
-            "Compilation Successful!\n",
-            "Jacobi relaxation Calculation: 4096 x 4096 mesh\n",
-            "    0  0.250000\n",
-            "  100  0.002397\n",
-            "  200  0.001204\n",
-            "  300  0.000804\n",
-            "  400  0.000603\n",
-            "  500  0.000483\n",
-            "  600  0.000403\n",
-            "  700  0.000345\n",
-            "  800  0.000302\n",
-            "  900  0.000269\n",
-            " completed in     46.662 seconds\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "laplace2d.f90:\n",
-            "calcnext:\n",
-            "     58, Generating Multicore code\n",
-            "         59, !$acc loop gang\n",
-            "     59, Generating reduction(max:error)\n",
-            "     60, Loop is parallelizable\n",
-            "swap:\n",
-            "     76, Generating Multicore code\n",
-            "         77, !$acc loop gang\n",
-            "     78, Loop is parallelizable\n",
-            "jacobi.f90:\n"
-          ]
-        }
+      "cell_type": "markdown",
+      "source": [
+        "## Compiling and run **multicore** version of the `laplace` example"
       ],
+      "metadata": {
+        "id": "W1zvLZqLpZzJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "TkKE90xVvJkO"
+      },
+      "outputs": [],
       "source": [
         "%%bash\n",
         "source /usr/share/modules/init/bash\n",
@@ -825,64 +586,21 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 7,
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "cLIVAniivJkO",
-        "outputId": "f3646585-f818-4857-b721-0c8ab1727ce3"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "rm -f *.o laplace\n",
-            "nvfortran -fast -ta=tesla:managed -Minfo=accel -o laplace laplace2d.f90 jacobi.f90 \n",
-            "Compilation Successful!\n",
-            "Jacobi relaxation Calculation: 4096 x 4096 mesh\n",
-            "    0  0.250000\n",
-            "  100  0.002397\n",
-            "  200  0.001204\n",
-            "  300  0.000804\n",
-            "  400  0.000603\n",
-            "  500  0.000483\n",
-            "  600  0.000403\n",
-            "  700  0.000345\n",
-            "  800  0.000302\n",
-            "  900  0.000269\n",
-            " completed in      2.901 seconds\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "laplace2d.f90:\n",
-            "calcnext:\n",
-            "     58, Generating implicit copyin(a(:n-1,:m-1)) [if not already present]\n",
-            "         Generating implicit copy(error) [if not already present]\n",
-            "         Generating implicit copyout(anew(1:n-2,1:m-2)) [if not already present]\n",
-            "     59, Loop is parallelizable\n",
-            "     60, Loop is parallelizable\n",
-            "         Generating NVIDIA GPU code\n",
-            "         59, !$acc loop gang, vector(128) collapse(2) ! blockidx%x threadidx%x\n",
-            "             Generating implicit reduction(max:error)\n",
-            "         60,   ! blockidx%x threadidx%x auto-collapsed\n",
-            "swap:\n",
-            "     77, Generating implicit copyin(anew(1:n-2,1:m-2)) [if not already present]\n",
-            "         Generating implicit copyout(a(1:n-2,1:m-2)) [if not already present]\n",
-            "     78, Loop is parallelizable\n",
-            "     79, Loop is parallelizable\n",
-            "         Generating NVIDIA GPU code\n",
-            "         78, !$acc loop gang, vector(128) collapse(2) ! blockidx%x threadidx%x\n",
-            "         79,   ! blockidx%x threadidx%x auto-collapsed\n",
-            "jacobi.f90:\n"
-          ]
-        }
+      "cell_type": "markdown",
+      "source": [
+        "## Compiling and run **gpu** version of the `laplace` example"
       ],
+      "metadata": {
+        "id": "FKKfpjlJpx7e"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "cLIVAniivJkO"
+      },
+      "outputs": [],
       "source": [
         "%%bash\n",
         "source /usr/share/modules/init/bash\n",
